changes to combat packets